# waybar-niri-workspaces

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_en.md
.github/workflows/: release.yml
src/: compositor.rs  errors.rs  global.rs  lib.rs  screen.rs  settings.rs  styles.css  widget.rs
