[package]
name = "waybar-niri-workspaces"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
async-channel = "2.5"
bitflags = "2.9"
evdev = "0.12"
futures = "0.3"
itertools = "0.14"
niri-ipc = "26.4.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
waybar-cffi = "0.1"
